headers/RadarKit/RKFoundation.h

size_t RKFileRead(void *, size_t, size_t, FILE *);
// Variables in rkGlobalParameters / Presentation
void RKSetStatusColor(const bool);
void RKSetWantColor(const bool);
void RKSetWantScreenOutput(const bool);
bool RKGetWantScreenOutput(void);
void RKSetUseDailyLog(const bool);
int RKSetProgramName(const char *);
int RKSetRootFolder(const char *) __attribute__ ((deprecated));
int RKSetRootDataFolder(const char *);
int RKSetLogfile(const char *);
int RKSetLogfileToDefault(void);
char *RKVersionString(void);
RKValueType RKGuessValueType(const char *);
// Filename / string
int RKIsFilenameStandard(const char *filename);
bool RKGetSymbolFromFilename(const char *filename, char *symbol);
bool RKGetPrefixFromFilename(const char *filename, char *prefix);
int RKListFilesWithSamePrefix(const char *filename, char list[][RKMaximumPathLength]);
// Common numeric output
void RKShowName(void);
void RKShowTypeSizes(void);
void RKShowVecFloatLowPrecision(const char *name, const float *p, const int n);
void RKShowVecFloat(const char *name, const float *p, const int n);
void RKShowVecIQZ(const char *name, const RKIQZ *p, const int n);
void RKShowVecComplex(const char *name, const RKComplex *p, const int n);
void RKShowArray(const RKFloat *data, const char *letter, const int width, const int height);
char *RKStringFromValue(const void *value, RKValueType type);
char *RKVariableInString(const char *name, const void *value, RKValueType type);
size_t RKPrettyStringSizeEstimate(const char *);
size_t RKPrettyStringFromKeyValueString(char *, const char *);
// Buffer
void *RKMalloc(const uint32_t capacity);
void RKZeroOutFloat(RKFloat *data, const uint32_t capacity);
void RKZeroOutIQZ(RKIQZ *data, const uint32_t capacity);
void RKZeroTailFloat(RKFloat *data, const uint32_t capacity, const uint32_t origin);
void RKZeroTailIQZ(RKIQZ *data, const uint32_t capacity, const uint32_t origin);
// Pulse
size_t RKPulseBufferAlloc(RKBuffer *, const uint32_t capacity, const uint32_t count);
void RKPulseBufferFree(RKBuffer);
RKPulse *RKGetPulseFromBuffer(RKBuffer, const uint32_t pulseIndex);
RKInt16C *RKGetInt16CDataFromPulse(RKPulse *, const uint32_t);
RKComplex *RKGetComplexDataFromPulse(RKPulse *, const uint32_t);
RKIQZ RKGetSplitComplexDataFromPulse(RKPulse *, const uint32_t);
int RKClearPulseBuffer(RKBuffer, const uint32_t);
int RKReadPulseFromFileReference(RKPulse *, RKFileHeader *, FILE *);
RKPulse *RKGetVacantPulseFromBuffer(RKBuffer, uint32_t *, const uint32_t);
RKBuffer RKPulseBufferAllocCopyFromBuffer(RKBuffer pulses, const uint32_t start, const uint32_t count, const uint32_t depth);
void RKPulseDuplicateSplitComplex(RKPulse *);