python/src/radarkit/_ctypes_.py


# RKFoundation.h: 129
if _libs["radarkit"].has("RKFileRead", "cdecl"):
    RKFileRead = _libs["radarkit"].get("RKFileRead", "cdecl")
    RKFileRead.argtypes = [POINTER(None), c_size_t, c_size_t, POINTER(FILE)]
    RKFileRead.restype = c_size_t

# RKFoundation.h: 132
if _libs["radarkit"].has("RKSetStatusColor", "cdecl"):
    RKSetStatusColor = _libs["radarkit"].get("RKSetStatusColor", "cdecl")
    RKSetStatusColor.argtypes = [c_bool]
    RKSetStatusColor.restype = None

# RKFoundation.h: 133
if _libs["radarkit"].has("RKSetWantColor", "cdecl"):
    RKSetWantColor = _libs["radarkit"].get("RKSetWantColor", "cdecl")
    RKSetWantColor.argtypes = [c_bool]
    RKSetWantColor.restype = None

# RKFoundation.h: 134
if _libs["radarkit"].has("RKSetWantScreenOutput", "cdecl"):
    RKSetWantScreenOutput = _libs["radarkit"].get("RKSetWantScreenOutput", "cdecl")
    RKSetWantScreenOutput.argtypes = [c_bool]
    RKSetWantScreenOutput.restype = None

# RKFoundation.h: 135
if _libs["radarkit"].has("RKGetWantScreenOutput", "cdecl"):
    RKGetWantScreenOutput = _libs["radarkit"].get("RKGetWantScreenOutput", "cdecl")
    RKGetWantScreenOutput.argtypes = []
    RKGetWantScreenOutput.restype = c_bool

# RKFoundation.h: 136
if _libs["radarkit"].has("RKSetUseDailyLog", "cdecl"):
    RKSetUseDailyLog = _libs["radarkit"].get("RKSetUseDailyLog", "cdecl")
    RKSetUseDailyLog.argtypes = [c_bool]
    RKSetUseDailyLog.restype = None

# RKFoundation.h: 137
if _libs["radarkit"].has("RKSetProgramName", "cdecl"):
    RKSetProgramName = _libs["radarkit"].get("RKSetProgramName", "cdecl")
    RKSetProgramName.argtypes = [String]
    RKSetProgramName.restype = c_int

# RKFoundation.h: 138
if _libs["radarkit"].has("RKSetRootFolder", "cdecl"):
    RKSetRootFolder = _libs["radarkit"].get("RKSetRootFolder", "cdecl")
    RKSetRootFolder.argtypes = [String]
    RKSetRootFolder.restype = c_int

# RKFoundation.h: 139
if _libs["radarkit"].has("RKSetRootDataFolder", "cdecl"):
    RKSetRootDataFolder = _libs["radarkit"].get("RKSetRootDataFolder", "cdecl")
    RKSetRootDataFolder.argtypes = [String]
    RKSetRootDataFolder.restype = c_int

# RKFoundation.h: 140
if _libs["radarkit"].has("RKSetLogfile", "cdecl"):
    RKSetLogfile = _libs["radarkit"].get("RKSetLogfile", "cdecl")
    RKSetLogfile.argtypes = [String]
    RKSetLogfile.restype = c_int

# RKFoundation.h: 141
if _libs["radarkit"].has("RKSetLogfileToDefault", "cdecl"):
    RKSetLogfileToDefault = _libs["radarkit"].get("RKSetLogfileToDefault", "cdecl")
    RKSetLogfileToDefault.argtypes = []
    RKSetLogfileToDefault.restype = c_int

# RKFoundation.h: 143
if _libs["radarkit"].has("RKVersionString", "cdecl"):
    RKVersionString = _libs["radarkit"].get("RKVersionString", "cdecl")
    RKVersionString.argtypes = []
    if sizeof(c_int) == sizeof(c_void_p):
        RKVersionString.restype = ReturnString
    else:
        RKVersionString.restype = String
        RKVersionString.errcheck = ReturnString

# RKFoundation.h: 144
if _libs["radarkit"].has("RKGuessValueType", "cdecl"):
    RKGuessValueType = _libs["radarkit"].get("RKGuessValueType", "cdecl")
    RKGuessValueType.argtypes = [String]
    RKGuessValueType.restype = RKValueType

# RKFoundation.h: 147
if _libs["radarkit"].has("RKIsFilenameStandard", "cdecl"):
    RKIsFilenameStandard = _libs["radarkit"].get("RKIsFilenameStandard", "cdecl")
    RKIsFilenameStandard.argtypes = [String]
    RKIsFilenameStandard.restype = c_int

# RKFoundation.h: 148
if _libs["radarkit"].has("RKGetSymbolFromFilename", "cdecl"):
    RKGetSymbolFromFilename = _libs["radarkit"].get("RKGetSymbolFromFilename", "cdecl")
    RKGetSymbolFromFilename.argtypes = [String, String]
    RKGetSymbolFromFilename.restype = c_bool

# RKFoundation.h: 149
if _libs["radarkit"].has("RKGetPrefixFromFilename", "cdecl"):
    RKGetPrefixFromFilename = _libs["radarkit"].get("RKGetPrefixFromFilename", "cdecl")
    RKGetPrefixFromFilename.argtypes = [String, String]
    RKGetPrefixFromFilename.restype = c_bool

# RKFoundation.h: 150
if _libs["radarkit"].has("RKListFilesWithSamePrefix", "cdecl"):
    RKListFilesWithSamePrefix = _libs["radarkit"].get("RKListFilesWithSamePrefix", "cdecl")
    RKListFilesWithSamePrefix.argtypes = [String, POINTER(c_char * int(1024))]
    RKListFilesWithSamePrefix.restype = c_int

# RKFoundation.h: 153
if _libs["radarkit"].has("RKShowName", "cdecl"):
    RKShowName = _libs["radarkit"].get("RKShowName", "cdecl")
    RKShowName.argtypes = []
    RKShowName.restype = None

# RKFoundation.h: 154
if _libs["radarkit"].has("RKShowTypeSizes", "cdecl"):
    RKShowTypeSizes = _libs["radarkit"].get("RKShowTypeSizes", "cdecl")
    RKShowTypeSizes.argtypes = []
    RKShowTypeSizes.restype = None

# RKFoundation.h: 155
if _libs["radarkit"].has("RKShowVecFloatLowPrecision", "cdecl"):
    RKShowVecFloatLowPrecision = _libs["radarkit"].get("RKShowVecFloatLowPrecision", "cdecl")
    RKShowVecFloatLowPrecision.argtypes = [String, POINTER(c_float), c_int]
    RKShowVecFloatLowPrecision.restype = None

# RKFoundation.h: 156
if _libs["radarkit"].has("RKShowVecFloat", "cdecl"):
    RKShowVecFloat = _libs["radarkit"].get("RKShowVecFloat", "cdecl")
    RKShowVecFloat.argtypes = [String, POINTER(c_float), c_int]
    RKShowVecFloat.restype = None

# RKFoundation.h: 157
if _libs["radarkit"].has("RKShowVecIQZ", "cdecl"):
    RKShowVecIQZ = _libs["radarkit"].get("RKShowVecIQZ", "cdecl")
    RKShowVecIQZ.argtypes = [String, POINTER(RKIQZ), c_int]
    RKShowVecIQZ.restype = None

# RKFoundation.h: 158
if _libs["radarkit"].has("RKShowVecComplex", "cdecl"):
    RKShowVecComplex = _libs["radarkit"].get("RKShowVecComplex", "cdecl")
    RKShowVecComplex.argtypes = [String, POINTER(RKComplex), c_int]
    RKShowVecComplex.restype = None

# RKFoundation.h: 159
if _libs["radarkit"].has("RKShowArray", "cdecl"):
    RKShowArray = _libs["radarkit"].get("RKShowArray", "cdecl")
    RKShowArray.argtypes = [POINTER(RKFloat), String, c_int, c_int]
    RKShowArray.restype = None

# RKFoundation.h: 160
if _libs["radarkit"].has("RKStringFromValue", "cdecl"):
    RKStringFromValue = _libs["radarkit"].get("RKStringFromValue", "cdecl")
    RKStringFromValue.argtypes = [POINTER(None), RKValueType]
    if sizeof(c_int) == sizeof(c_void_p):
        RKStringFromValue.restype = ReturnString
    else:
        RKStringFromValue.restype = String
        RKStringFromValue.errcheck = ReturnString

# RKFoundation.h: 161
if _libs["radarkit"].has("RKVariableInString", "cdecl"):
    RKVariableInString = _libs["radarkit"].get("RKVariableInString", "cdecl")
    RKVariableInString.argtypes = [String, POINTER(None), RKValueType]
    if sizeof(c_int) == sizeof(c_void_p):
        RKVariableInString.restype = ReturnString
    else:
        RKVariableInString.restype = String
        RKVariableInString.errcheck = ReturnString

# RKFoundation.h: 162
if _libs["radarkit"].has("RKPrettyStringSizeEstimate", "cdecl"):
    RKPrettyStringSizeEstimate = _libs["radarkit"].get("RKPrettyStringSizeEstimate", "cdecl")
    RKPrettyStringSizeEstimate.argtypes = [String]
    RKPrettyStringSizeEstimate.restype = c_size_t

# RKFoundation.h: 163
if _libs["radarkit"].has("RKPrettyStringFromKeyValueString", "cdecl"):
    RKPrettyStringFromKeyValueString = _libs["radarkit"].get("RKPrettyStringFromKeyValueString", "cdecl")
    RKPrettyStringFromKeyValueString.argtypes = [String, String]
    RKPrettyStringFromKeyValueString.restype = c_size_t

# RKFoundation.h: 166
if _libs["radarkit"].has("RKMalloc", "cdecl"):
    RKMalloc = _libs["radarkit"].get("RKMalloc", "cdecl")
    RKMalloc.argtypes = [uint32_t]
    RKMalloc.restype = POINTER(c_ubyte)
    RKMalloc.errcheck = lambda v,*a : cast(v, c_void_p)

# RKFoundation.h: 167
if _libs["radarkit"].has("RKZeroOutFloat", "cdecl"):
    RKZeroOutFloat = _libs["radarkit"].get("RKZeroOutFloat", "cdecl")
    RKZeroOutFloat.argtypes = [POINTER(RKFloat), uint32_t]
    RKZeroOutFloat.restype = None

# RKFoundation.h: 168
if _libs["radarkit"].has("RKZeroOutIQZ", "cdecl"):
    RKZeroOutIQZ = _libs["radarkit"].get("RKZeroOutIQZ", "cdecl")
    RKZeroOutIQZ.argtypes = [POINTER(RKIQZ), uint32_t]
    RKZeroOutIQZ.restype = None

# RKFoundation.h: 169
if _libs["radarkit"].has("RKZeroTailFloat", "cdecl"):
    RKZeroTailFloat = _libs["radarkit"].get("RKZeroTailFloat", "cdecl")
    RKZeroTailFloat.argtypes = [POINTER(RKFloat), uint32_t, uint32_t]
    RKZeroTailFloat.restype = None

# RKFoundation.h: 170
if _libs["radarkit"].has("RKZeroTailIQZ", "cdecl"):
    RKZeroTailIQZ = _libs["radarkit"].get("RKZeroTailIQZ", "cdecl")
    RKZeroTailIQZ.argtypes = [POINTER(RKIQZ), uint32_t, uint32_t]
    RKZeroTailIQZ.restype = None

# RKFoundation.h: 173
if _libs["radarkit"].has("RKPulseBufferAlloc", "cdecl"):
    RKPulseBufferAlloc = _libs["radarkit"].get("RKPulseBufferAlloc", "cdecl")
    RKPulseBufferAlloc.argtypes = [POINTER(RKBuffer), uint32_t, uint32_t]
    RKPulseBufferAlloc.restype = c_size_t

# RKFoundation.h: 174
if _libs["radarkit"].has("RKPulseBufferFree", "cdecl"):
    RKPulseBufferFree = _libs["radarkit"].get("RKPulseBufferFree", "cdecl")
    RKPulseBufferFree.argtypes = [RKBuffer]
    RKPulseBufferFree.restype = None

# RKFoundation.h: 175
if _libs["radarkit"].has("RKGetPulseFromBuffer", "cdecl"):
    RKGetPulseFromBuffer = _libs["radarkit"].get("RKGetPulseFromBuffer", "cdecl")
    RKGetPulseFromBuffer.argtypes = [RKBuffer, uint32_t]
    RKGetPulseFromBuffer.restype = POINTER(RKPulse)

# RKFoundation.h: 176
if _libs["radarkit"].has("RKGetInt16CDataFromPulse", "cdecl"):
    RKGetInt16CDataFromPulse = _libs["radarkit"].get("RKGetInt16CDataFromPulse", "cdecl")
    RKGetInt16CDataFromPulse.argtypes = [POINTER(RKPulse), uint32_t]
    RKGetInt16CDataFromPulse.restype = POINTER(RKInt16C)

# RKFoundation.h: 177
if _libs["radarkit"].has("RKGetComplexDataFromPulse", "cdecl"):
    RKGetComplexDataFromPulse = _libs["radarkit"].get("RKGetComplexDataFromPulse", "cdecl")
    RKGetComplexDataFromPulse.argtypes = [POINTER(RKPulse), uint32_t]
    RKGetComplexDataFromPulse.restype = POINTER(RKComplex)

# RKFoundation.h: 178
if _libs["radarkit"].has("RKGetSplitComplexDataFromPulse", "cdecl"):
    RKGetSplitComplexDataFromPulse = _libs["radarkit"].get("RKGetSplitComplexDataFromPulse", "cdecl")
    RKGetSplitComplexDataFromPulse.argtypes = [POINTER(RKPulse), uint32_t]
    RKGetSplitComplexDataFromPulse.restype = RKIQZ

# RKFoundation.h: 179
if _libs["radarkit"].has("RKClearPulseBuffer", "cdecl"):
    RKClearPulseBuffer = _libs["radarkit"].get("RKClearPulseBuffer", "cdecl")
    RKClearPulseBuffer.argtypes = [RKBuffer, uint32_t]
    RKClearPulseBuffer.restype = c_int

# RKFoundation.h: 180
if _libs["radarkit"].has("RKReadPulseFromFileReference", "cdecl"):
    RKReadPulseFromFileReference = _libs["radarkit"].get("RKReadPulseFromFileReference", "cdecl")
    RKReadPulseFromFileReference.argtypes = [POINTER(RKPulse), POINTER(RKFileHeader), POINTER(FILE)]
    RKReadPulseFromFileReference.restype = c_int

# RKFoundation.h: 181
if _libs["radarkit"].has("RKGetVacantPulseFromBuffer", "cdecl"):
    RKGetVacantPulseFromBuffer = _libs["radarkit"].get("RKGetVacantPulseFromBuffer", "cdecl")
    RKGetVacantPulseFromBuffer.argtypes = [RKBuffer, POINTER(uint32_t), uint32_t]
    RKGetVacantPulseFromBuffer.restype = POINTER(RKPulse)

# RKFoundation.h: 182
if _libs["radarkit"].has("RKPulseBufferAllocCopyFromBuffer", "cdecl"):
    RKPulseBufferAllocCopyFromBuffer = _libs["radarkit"].get("RKPulseBufferAllocCopyFromBuffer", "cdecl")
    RKPulseBufferAllocCopyFromBuffer.argtypes = [RKBuffer, uint32_t, uint32_t, uint32_t]
    RKPulseBufferAllocCopyFromBuffer.restype = RKBuffer

# RKFoundation.h: 183
if _libs["radarkit"].has("RKPulseDuplicateSplitComplex", "cdecl"):
    RKPulseDuplicateSplitComplex = _libs["radarkit"].get("RKPulseDuplicateSplitComplex", "cdecl")
    RKPulseDuplicateSplitComplex.argtypes = [POINTER(RKPulse)]
    RKPulseDuplicateSplitComplex.restype = None
